# openstack-guest-agents-unix

./: Makefile.am  configure.ac
commands/: Makefile.am  network.py  password.py
commands/freebsd/: network.py
commands/nicira/: __init__.py  network.py  password.py
unix/: configure.ac
unix/commands/: network.py  password.py
unix/commands/gentoo/: network.py
unix/scripts/: installer.sh.in
unix/scripts/generic/: nova-agent.in
unix/tests/: test_resetnetwork_interfaces.py
